# ice_server_serial_port

./: CMakeLists.txt  Dockerfile  centos-base.repo  socat-1.7.2.4-1.el6.rf.x86_64.rpm  start.sh
Ice-3.1.1/: all.dsw  minimal.dsp
Ice-3.1.1/config/: Make.rules
Ice-3.1.1/demo/: demo.dsp  demo.dsw
Ice-3.1.1/doc/: SliceDoc.sgml
Ice-3.1.1/include/Ice/: Buffer.h  GCRecMutex.h  Outgoing.h
Ice-3.1.1/slice/Glacier2/: PermissionsVerifierF.ice
Ice-3.1.1/slice/IceGrid/: FileParser.ice
Ice-3.1.1/src/Freeze/: freeze.dsp
Ice-3.1.1/src/FreezeScript/: AssignVisitor.cpp  Data.cpp  DumpDescriptors.cpp  Transformer.cpp  dumpdb.dsp  transformdb.dsp
Ice-3.1.1/src/Glacier2/: glacier2.dsp  glacier2router.dsp
Ice-3.1.1/src/Ice/: ConnectionI.h  TcpConnector.h  ThreadPool.h  Transceiver.h  ice.dsp
Ice-3.1.1/src/IceBox/: icebox.dsp  iceboxC.dsp  iceboxS.dsp
Ice-3.1.1/src/IceGrid/: Activator.cpp  FileParserI.cpp  FileParserI.h  PlatformInfo.cpp  dummy1.ice  icegrid.dsp  icegridC.dsp  icegridadmin.dsp  (+2 more)
Server/: Driver.java  DriverHolder.java  DriverPrx.java  DriverPrxHelper.java  DriverPrxHolder.java  SerialPort.java  SerialPortHolder.java  SerialPortPrx.java  SerialPortPrxHelper.java  SerialPortPrxHolder.java  _DriverDel.java  _DriverDelD.java  _DriverDelM.java  _DriverDisp.java  _DriverOperations.java  _DriverOperationsNC.java  _SerialPortDel.java  _SerialPortDelD.java  _SerialPortDelM.java  _SerialPortDisp.java  _SerialPortOperations.java  _SerialPortOperationsNC.java
java/: build.gradle  settings.gradle
src/: CMakeLists.txt  Server.ice  device.c  device.h  main.cpp
(+228 files in other folders)
